# types-confluent-kafka

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .releaserc.json  404.html  CODEOWNERS  LICENSE  README.md  compatibility.md  extra.css  index.html  pyproject.toml
.devcontainer/: bash_profile  devcontainer.json  starship.toml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md  RELEASE_GUIDE.md  SECURITY.md  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  security.yml
.github/ISSUE_TEMPLATES/: bug.yml  config.yml
.github/docker/: Dockerfile  README.md  build.sh
.github/workflows/: main.yml  mypy-test.yml  mypy_tests.yml  pre-commit.yml  pre-hooks.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  publishrc.yml  pull-request-target.yml  pull-request-title-validation.yml  pull-request.yml  pyright-test.yml  release-cp.yml  release.yml  releaserc.yml  semantic-release.yml  typeing-tests.yml  versioning.yml
.plugins/: README.md  init_script.sh  lint_dockerfile.sh
confluent_kafka-stubs/: __init__.py  __init__.pyi  cimpl.pyi  deserializing_consumer.pyi  error.pyi  serializing_producer.pyi
confluent_kafka-stubs/_model/: __init__.pyi
confluent_kafka-stubs/_util/: __init__.pyi  conversion_util.pyi  validation_util.pyi
confluent_kafka-stubs/admin/: __init__.pyi  _acl.pyi  _cluster.pyi  _config.pyi  _group.pyi  _listoffsets.pyi  _metadata.pyi  _records.pyi  _resource.pyi  _scram.pyi  _topic.pyi
confluent_kafka-stubs/aio/: _AIOConsumer.pyi  __init__.pyi  _common.pyi
confluent_kafka-stubs/aio/producer/: _AIOProducer.pyi  __init__.pyi  _buffer_timeout_manager.pyi  _kafka_batch_executor.pyi  _message_batch.pyi  _producer_batch_processor.pyi
confluent_kafka-stubs/avro/: __init__.pyi  cached_schema_registry_client.pyi  error.pyi  load.pyi
confluent_kafka-stubs/avro/serializer/: __init__.pyi  message_serializer.pyi
confluent_kafka-stubs/kafkatest/: __init__.pyi  verifiable_consumer.pyi  verifiable_producer.pyi
confluent_kafka-stubs/schema_registry/: __init__.pyi  avro.pyi  error.pyi  json_schema.pyi  protobuf.pyi  schema_registry_client.pyi
confluent_kafka-stubs/serialization/: __init__.pyi
confluent_kafka_stubs/: __init__.pyi  cimpl.pyi
contributions_and_conventions/: index.html
dev/: README.md  requirements.txt
docs/: makefile  mkdocs.yml
docs/docs/: contributions_and_conventions.md  getting_started.md  index.md  troubleshooting.md  work_with_typings.md
getting_started/: index.html
scripts/: check_extension.sh  hadolint.sh  hadolint.yml
search/: search_index.json
tests/confluent_kafka-stubs/: __init__.py
tests/confluent_kafka_stubs/: test_cimpli.py
troubleshooting/: index.html
work_with_typings/: index.html
