[project]
name = "types-confluent-kafka"
version = "1.3.5"
description = "Types for Confluent Kafka"
readme = "README.md"
license-files = ["LICENSE"]
keywords = [
    "types",
    "typings",
    "stubs",
    "confluent_kafka",
    "mypy",
    "lsp",
    "completion",
    "type hints",
    "type checking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9,<=3.13"
dependencies = []

[dependency-groups]
dev = [
    "confluent-kafka[avro]>=2.5.0",
    "mypy>=1.16.1",
    "pyright>=1.1.402",
    "types-requests>=2.32.4.20250611",
]
lint = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]
publish = ["twine>=6.1.0"]

[tool.ruff]
line-length = 120
indent-width = 4
include = ["confluent_kafka-stubs", "*.pyi"]
exclude = [
    ".venv",
    ".cache",
    ".mypy_cache",
    ".env",
    "build",
    "dist",
    "*.ipynb",
    "confluent-kafka-python",
    "tests",
]

[tool.ruff.lint]
ignore = ["F821", "F822"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = '--basetemp=/tmp/pytest'
# switch on `-s` for deep debuging
# addopts = '-s --basetemp=/tmp/pytest'

filterwarnings = []

testpaths = []

markers = []

[tool.mypy]
ignore_missing_imports = true
warn_unreachable = true
enable_incomplete_feature = "Unpack"
disable_error_code = ["attr-defined"]

[tool.pyright]
include = ["confluent_kafka-stubs"]
exclude = ["**/__pycache__", "tests/**"]
defineConstant = { DEBUG = true }
stubPath = "confluent_kafka-stubs"

reportMissingImports = "warning"
reportIncompatibleMethodOverride = "none"
reportAttributeAccessIssue = "none"
